Bug 49068 - [Bisected SNB IVB]Oglc glsl-bif-tex-proj(advanced.textureProj.usampler3D.set3) regressed
Summary: [Bisected SNB IVB]Oglc glsl-bif-tex-proj(advanced.textureProj.usampler3D.set3...
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-22 19:27 UTC by lu hua
Modified: 2012-05-08 00:13 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-04-22 19:27:24 UTC
System Environment:
--------------------------
Arch:            i386
Platform:        Sandybridge
Libdrm:		(master)2.4.33-13-g73b9a2881c37990dee0afb9cb23a6a1e85339ede
Mesa:		(master)47d22e56de4738f792bb9a86da23435744d53f00
Xf86_video_intel:(master)2.18.0-219-gcaf9144271a10f90ea580c246b2df3f69a10b7a0
Libva:		(vaapi-ext)f12f80371fb534e6bbf248586b3c17c298a31f4e
Libva_intel_driver:(vaapi-ext)82fa52510a37ab645daaa3bb7091ff5096a20d0b
Kernel:	 (drm-intel-next-queued) 07ad4d14c7e37db174a9cdeb72f61d106a890c77

Bug detailed description:
-----------------------------
It fails on sandybridge and ivybridge with mesa master branch.It doesn't happen on mesa  8.0 branch.

Bisect shows:4b2a4cb7c2131c3c31e3d44a0d8838ef45f270e7 is the first bad commit.
commit 4b2a4cb7c2131c3c31e3d44a0d8838ef45f270e7
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Thu Mar 29 17:29:20 2012 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Thu Apr 19 16:33:45 2012 -0700

    glsl: Properly throw compile-time errors for conflicting FS output writes.

    We were checking for these at link time previously, which is not as
    early as mandated, and would actually fail to detect conflicting
    writes if dead code removal removed some writes.

    Fixes failures in piglit
    glsl-*/compiler/fragment-outputs/write-gl_Frag*

    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

Reproduce steps:
----------------
1. start X
2. ./oglconform -z -suite all -v 2 -D 117 -test glsl-bif-tex-proj advanced.textureProj.usampler3D.set3
Comment 1 Eric Anholt 2012-05-04 14:53:51 UTC
commit b2ee5a08bae6cdbbdafc1f1d9d6f3afbad2f7944
Author: Eric Anholt <eric@anholt.net>
Date:   Mon Apr 23 16:10:12 2012 -0700

    glsl: Don't consider unused FS out variables as being statically assigned.
    
    I only considered var->assigned for FragColor and FragData, but
    ignored when it was false for out vars.  Fixes piglit
    write-gl_FragColor-and-not-user-output.frag
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49068
Comment 2 lu hua 2012-05-08 00:13:34 UTC
Verified. Fixed on commit c19672f90a653a8bd6adcc35e294b7150b34f9e7.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.